manifests/juice-shop-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop-v1
  labels:
    app: juice-shop
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: juice-shop
      version: v1
  template:
    metadata:
      labels:
        app: juice-shop
        version: v1
    spec:
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop:v19.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-v1
spec:
  selector:
    app: juice-shop
    version: v1
  ports:
    - port: 80
      targetPort: 3000
