manifests/juice-shop-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-v2
  labels:
    app: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
